# DRF_Project

./: .gitignore  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py
users/: models.py  payment_service.py  serializers.py  serializers_jwt.py  tasks.py  urls.py  views.py
users/management/commands/: create_moderator_group.py  generate_payments.py
users/migrations/: 0001_initial.py
